# mini6dof_arm

./: CMakeLists.txt  README.md  package.xml
Arduino_code/ROS_pubsub/: ROS_pubsub.ino
Arduino_code/ROSserial_Dynamixel_6DOFarm/: 6DOF_arm.h  Dynamixel_6DOF_func.ino  ROSserial_Dynamixel_6DOFarm.ino  jointstate_connection.ino
Arduino_code/ROSserial_Dynamixel_6DOFarm_just_move/ROSserial_Dynamixel_6DOFarm/: 6DOF_arm.h  Dynamixel_6DOF_func.ino  ROSserial_Dynamixel_6DOFarm.ino  jointstate_connection.ino
Arduino_code_mini/: Arduino_code_mini.ino
config/: controllers.yaml  moveit_controllers.yaml
config/moveit/: arm_robot.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
ik_src/include/: My_robot_hardware_interface.h
ik_src/src/: MyRobot_hardware_interface.cpp
include/: MyRobot_hardware_interface.h  My_robot_hardware_interface.h
launch/: control_gazebo.launch  moveit_config.launch  moveit_demo.launch  sim_control.launch  yolo_arm.launch
msg/: joint_state_msg.msg
parameter/: yolo_param.yaml
script/: robot_info.py  target_ball_stay.py  yolo_arm.py  yolo_target_tracking.py
src/: MyRobot_hardware_interface.cpp  robot_arm_info.py  robot_arm_set_angle.py  simple_moveit_subscriber.cpp  simple_moveit_subscriber.py
srv/: jointstateService.srv
urdf/: robot_body.urdf  robot_body_moveit.urdf
